Project tostinh {
  database_type: "Laravel migrations"
}

Table users {
  id bigint [pk, increment]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password varchar [not null]
  first_name varchar [null]
  last_name varchar [null]
  is_admin boolean [not null, default: false]
  is_active boolean [not null, default: true]
  email_verified_at timestamp [null]
  remember_token varchar [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table password_reset_tokens {
  email varchar [pk]
  token varchar [not null]
  created_at timestamp [null]
}

Table sessions {
  id varchar [pk]
  user_id bigint [null]
  ip_address varchar(45) [null]
  user_agent text [null]
  payload longtext [not null]
  last_activity int [not null]
}

Table email_otps {
  id bigint [pk, increment]
  user_id bigint [not null]
  otp varchar(6) [not null]
  is_used boolean [not null, default: false]
  expires_at timestamp [not null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table profiles {
  id bigint [pk, increment]
  user_id bigint [unique, not null]
  phone_number varchar(20) [null]
  address text [null]
  avatar varchar [null]
  dob date [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table categories {
  id bigint [pk, increment]
  name varchar(50) [unique, not null]
  slug varchar(80) [unique, not null]
  description text [null]
  icon varchar(50) [null]
  color varchar(7) [null]
  is_active boolean [not null, default: true]
  user_id bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table brands {
  id bigint [pk, increment]
  name varchar(100) [unique, not null]
  slug varchar(100) [unique, not null]
  logo varchar [null]
  description text [null]
  website varchar [null]
  is_active boolean [not null, default: true]
  user_id bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table products {
  id bigint [pk, increment]
  name varchar(100) [not null]
  slug varchar(150) [unique, not null]
  description text [null]
  price decimal(10,2) [not null]
  original_price decimal(10,2) [null]
  stock int [not null, default: 0]
  image varchar [null]
  is_active boolean [not null, default: true]
  is_featured boolean [not null, default: false]
  category_id bigint [not null]
  brand_id bigint [null]
  user_id bigint [not null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table product_images {
  id bigint [pk, increment]
  product_id bigint [not null]
  image varchar [not null]
  alt_text varchar(150) [null]
  is_primary boolean [not null, default: false]
  order int [not null, default: 0]
  created_at timestamp [not null]
}

Table variant_types {
  id bigint [pk, increment]
  name varchar(50) [unique, not null]
}

Table product_variants {
  id bigint [pk, increment]
  product_id bigint [not null]
  variant_type_id bigint [not null]
  value varchar(100) [not null]
  color_hex varchar(7) [null]
  price_modifier decimal(10,2) [not null, default: 0]
  stock int [not null, default: 0]
  is_active boolean [not null, default: true]

  indexes {
    (product_id, variant_type_id, value) [unique]
  }
}

Table product_specifications {
  id bigint [pk, increment]
  product_id bigint [not null]
  key varchar(100) [not null]
  value text [not null]
  order int [not null, default: 0]
}

Table reviews {
  id bigint [pk, increment]
  product_id bigint [not null]
  user_id bigint [not null]
  rating tinyint [not null]
  title varchar(150) [null]
  body text [null]
  is_verified_purchase boolean [not null, default: false]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (product_id, user_id) [unique]
  }
}

Table favorites {
  id bigint [pk, increment]
  product_id bigint [not null]
  user_id bigint [not null]
  created_at timestamp [not null]

  indexes {
    (product_id, user_id) [unique]
  }
}

Table logos {
  id bigint [pk, increment]
  image varchar [not null]
  title varchar(100) [null]
  is_active boolean [not null, default: true]
  user_id bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table banners {
  id bigint [pk, increment]
  image varchar [not null]
  foreground_image varchar [null]
  text varchar(180) [not null]
  is_active boolean [not null, default: true]
  sort_order int [not null, default: 0]
  user_id bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table store_settings {
  id bigint [pk, increment]
  store_name varchar(120) [not null, default: "TosTinh"]
  store_email varchar [null]
  store_phone varchar(30) [null]
  store_address text [null]
  currency varchar(10) [not null, default: "USD"]
  timezone varchar(64) [not null, default: "Asia/Phnom_Penh"]
  store_logo varchar [null]
  login_alerts boolean [not null, default: true]
  two_factor_required boolean [not null, default: false]
  password_expiry_days int [not null, default: 90]
  session_timeout_minutes int [not null, default: 30]
  order_email_notifications boolean [not null, default: true]
  low_stock_notifications boolean [not null, default: true]
  marketing_emails boolean [not null, default: false]
  notify_email varchar [null]
  enable_telegram_receipts boolean [not null, default: false]
  telegram_chat_id varchar(100) [null]
  currency_position varchar(10) [not null, default: "before"]
  tax_rate decimal(5,2) [not null, default: 0]
  enable_cod boolean [not null, default: true]
  enable_card_payments boolean [not null, default: true]
  enable_bank_transfer boolean [not null, default: false]
  shipping_origin varchar(200) [null]
  free_shipping_threshold decimal(10,2) [not null, default: 0]
  flat_shipping_rate decimal(10,2) [not null, default: 0]
  processing_time_days int [not null, default: 2]
  email_from_name varchar(120) [not null, default: "TosTinh"]
  email_footer_text text [null]
  enable_branded_emails boolean [not null, default: true]
  theme_mode varchar(10) [not null, default: "light"]
  accent_color varchar(7) [not null, default: "#e85a4f"]
  show_store_logo_in_header boolean [not null, default: true]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [unique, not null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [not null]
  product_id bigint [not null]
  variant_id bigint [null]
  qty int [not null, default: 1]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (cart_id, product_id, variant_id) [unique]
  }
}

Table orders {
  id bigint [pk, increment]
  order_number varchar(20) [unique, not null]
  total_amount decimal(10,2) [not null]
  status varchar(20) [not null, default: "pending"]
  user_id bigint [not null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [not null]
  product_id bigint [null]
  product_name varchar(100) [not null]
  variant_label varchar(200) [null]
  qty int [not null]
  price decimal(10,2) [not null]
  delivery_address text [null]
  delivery_lat decimal(18,15) [null]
  delivery_lng decimal(18,15) [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table payment_transactions {
  id bigint [pk, increment]
  order_id bigint [not null]
  amount decimal(10,2) [not null]
  payment_method varchar(20) [not null]
  currency varchar(10) [not null, default: "USD"]
  status varchar(20) [not null, default: "pending"]
  qr_code_string text [null]
  qr_code_md5 varchar(32) [null]
  qr_code_image varchar [null]
  bakong_bill_number varchar(100) [null]
  bakong_reference varchar(255) [null]
  gateway_response text [null]
  paid_at timestamp [null]
  expires_at timestamp [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table cache {
  key varchar [pk]
  value mediumtext [not null]
  expiration int [not null]
}

Table cache_locks {
  key varchar [pk]
  owner varchar [not null]
  expiration int [not null]
}

Table jobs {
  id bigint [pk, increment]
  queue varchar [not null]
  payload longtext [not null]
  attempts tinyint [not null]
  reserved_at int [null]
  available_at int [not null]
  created_at int [not null]
}

Table job_batches {
  id varchar [pk]
  name varchar [not null]
  total_jobs int [not null]
  pending_jobs int [not null]
  failed_jobs int [not null]
  failed_job_ids longtext [not null]
  options mediumtext [null]
  cancelled_at int [null]
  created_at int [not null]
  finished_at int [null]
}

Table failed_jobs {
  id bigint [pk, increment]
  uuid varchar [unique, not null]
  connection text [not null]
  queue text [not null]
  payload longtext [not null]
  exception longtext [not null]
  failed_at timestamp [not null]
}

Ref: sessions.user_id > users.id
Ref: email_otps.user_id > users.id [delete: cascade]
Ref: profiles.user_id > users.id [delete: cascade]
Ref: categories.user_id > users.id [delete: set null]
Ref: brands.user_id > users.id [delete: set null]
Ref: products.category_id > categories.id [delete: cascade]
Ref: products.brand_id > brands.id [delete: set null]
Ref: products.user_id > users.id [delete: cascade]
Ref: product_images.product_id > products.id [delete: cascade]
Ref: product_variants.product_id > products.id [delete: cascade]
Ref: product_variants.variant_type_id > variant_types.id [delete: cascade]
Ref: product_specifications.product_id > products.id [delete: cascade]
Ref: reviews.product_id > products.id [delete: cascade]
Ref: reviews.user_id > users.id [delete: cascade]
Ref: favorites.product_id > products.id [delete: cascade]
Ref: favorites.user_id > users.id [delete: cascade]
Ref: logos.user_id > users.id [delete: set null]
Ref: banners.user_id > users.id [delete: set null]
Ref: carts.user_id > users.id [delete: cascade]
Ref: cart_items.cart_id > carts.id [delete: cascade]
Ref: cart_items.product_id > products.id [delete: cascade]
Ref: cart_items.variant_id > product_variants.id [delete: set null]
Ref: orders.user_id > users.id [delete: cascade]
Ref: order_items.order_id > orders.id [delete: cascade]
Ref: order_items.product_id > products.id [delete: set null]
Ref: payment_transactions.order_id > orders.id [delete: cascade]
